# fuga

./: .all-contributorsrc  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE  README.md  README_jp.md  renovate.json
.github/prompts/: openspec-archive.prompt.md
.github/workflow/: rust_ci.yml
.github/workflows/: build.yml  rust_ci.yml
openspec/: project.md
openspec/changes/add-preset-management/: tasks.md
openspec/changes/add-tui-dashboard/: proposal.md  tasks.md
openspec/changes/add-tui-dashboard/specs/tui-dashboard/: spec.md
openspec/changes/archive/2025-10-29-add-tui-dashboard/: tasks.md
openspec/changes/archive/2025-10-29-add-tui-dashboard/specs/tui-dashboard/: spec.md
openspec/changes/archive/2025-10-29-improve-cli-foundations/: proposal.md  tasks.md
openspec/changes/archive/2025-10-29-improve-cli-foundations/specs/cli-foundations/: spec.md
openspec/changes/archive/2025-10-29-update-multi-target-marking/: proposal.md  tasks.md
openspec/changes/archive/2025-10-31-add-preset-management/: proposal.md  tasks.md
openspec/changes/archive/2025-10-31-add-preset-management/specs/cli-foundations/: spec.md
openspec/changes/archive/2025-10-31-add-preset-management/specs/tui-dashboard/: spec.md
openspec/changes/improve-cli-foundations/: tasks.md
openspec/changes/update-multi-target-marking/: tasks.md
openspec/changes/update-multi-target-marking/specs/cli-foundations/: spec.md
openspec/specs/cli-foundations/: spec.md
openspec/specs/tui-dashboard/: spec.md
src/: fuga.rs  fugue.rs  lib.rs  main.rs  traits.rs
src/commands/: completion.rs  copy.rs  link.rs  mark.rs  mod.rs  move.rs  preset.rs
src/config/: app_config.rs  mod.rs  storage.rs
src/error/: mod.rs  types.rs
src/services/: filesystem.rs  mod.rs  path.rs
src/tui/: dashboard.rs
src/ui/: formatting.rs  mod.rs
tests/: cli_flows.rs
