[package]
name = "fuga"
version = "0.1.2"
edition = "2021"
authors = ["liebe-magi <liebe.magi@gmail.com>"]
description = "A CLI tool to operate files or directories in 2 steps."
readme = "README.md"
repository = "https://github.com/liebe-magi/fuga"
license = "MIT"
categories = ["filesystem"]
keywords = ["cli", "file", "filesystem"]
default-run = "fuga"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5.2"
serde = "^1.0.200"
serde_derive = "^1.0.200"
confy = "^0.6.1"
dirs = "6.0.0"
termion = "4.0.0"
fs_extra = "1.3.0"
indicatif = "0.17.8"
emojis = "0.6.2"
once_cell = "1.19.0"

[[bin]]
name = "fuga"
path = "src/main.rs"
