[package]
name = "fuga"
version = "1.1.0"
edition = "2021"
authors = ["liebe-magi <liebe.magi@gmail.com>"]
description = "A CLI tool to operate files or directories in 2 steps."
readme = "README.md"
repository = "https://github.com/liebe-magi/fuga"
license = "MIT"
categories = ["filesystem"]
keywords = ["cli", "file", "filesystem"]
default-run = "fuga"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5.2"
serde = { version = "^1.0.200", features = ["derive"] }
confy = "^2.0.0"
dirs = "6.0.0"
fs_extra = "1.3.0"
indicatif = "0.18.0"
emojis = "0.8.0"
once_cell = "1.19.0"
crossterm = "0.29.0"
ratatui = { version = "0.29.0", default-features = false, features = ["crossterm"] }

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.1"
predicates = "3.1.0"
tempfile = "3.10.1"

[[bin]]
name = "fuga"
path = "src/main.rs"
